--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -1,95 +1,41 @@
 \subsection{Häusliche Gewalt}    \label{subsec_2.1.2}
 % Definition häusliche Gewalt
-Wie in Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression bereits erwähnt ist der Zweck von 
-Gewalt die Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}.
-Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht Macht oder Kontrolle
-über ein anderes Mitglied zu haben, zählt das zur häuslichen Gewalt. Sowohl in bestehenden, wie 
-auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche
-Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}.
-Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern 
-kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}
-Die in häusliche Gewalt involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder,
-Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}
-Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft.
+Wie in Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression bereits erwähnt ist der Zweck von Gewalt die Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}. Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht Macht oder Kontrolle über ein anderes Mitglied zu haben, zählt das zur häuslichen Gewalt. Sowohl in bestehenden, wie auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}. Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}. Die in häusliche Gewalt involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft.
 
 % GEWALTARTEN
 \subsubsection{Gewaltarten}     \label{2.1.2.1}
-Wenn man das Wort Gewalt hört, denken die meisten erst an \textit{physische Gewalt}. Doch so wie die 
-Aggression kann sich die Gewalt auf unterschiedliche Arten manifestiert. Eine einheitliche 
-Unterteilung der verschiedenen Gewaltarten ist in der Forschung bislang nicht gegeben. Je nach 
-Schwerpunkt wird auf bis zu fünf Gewaltformen unterschieden. Zu der zu Beginn genannten physischen 
-Gewalt gibt es noch die \textit{psychische, sexualisiert, soziale und ökonomische Gewalt} \parencite{Def_Form_Folge_Gewalt}
+Wenn man das Wort Gewalt hört, denken die meisten erst an \textit{physische Gewalt}. Doch so wie die Aggression kann sich die Gewalt auf unterschiedliche Arten manifestiert. Eine einheitliche Unterteilung der verschiedenen Gewaltarten ist in der Forschung bislang nicht gegeben. Je nach Schwerpunkt wird auf bis zu fünf Gewaltformen unterschieden. Zu der zu Beginn genannten physischen Gewalt gibt es noch die \textit{psychische, sexualisiert, soziale und ökonomische Gewalt} \parencite{Def_Form_Folge_Gewalt}.
 
 % physische Gewalt
-In Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression wurde bereits auf die physische 
-Aggression eingegangen und darauf, dass die Abgrenzung von Gewalt und Aggression nicht einfach ist. 
-Denn wie auch die physische Aggression, ist Bestandteil der körperlichen Gewalt jede Form von 
-physischen Angriffen \parencite{ph_G_wie_aggro}
-Darunter zählen beispielsweise Tritte, Bisse, Würgen oder Gewaltausübungen mithilfe von Gegenständen.
-Im Extremfall kann es zur Tötung kommen \parencite{Gewaltart, Def_haus_Gewalt, physische_Gewalt_wie_aggro, Def_Form_Folge_Gewalt}.
+In Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression wurde bereits auf die physische Aggression eingegangen und darauf, dass die Abgrenzung von Gewalt und Aggression nicht einfach ist. Denn wie auch die physische Aggression, ist Bestandteil der körperlichen Gewalt jede Form von physischen Angriffen \parencite{ph_G_wie_aggro}. Darunter zählen beispielsweise Tritte, Bisse, Würgen oder Gewaltausübungen mithilfe von Gegenständen. Im Extremfall kann es zur Tötung kommen \parencite{Gewaltart, Def_haus_Gewalt, physische_Gewalt_wie_aggro, Def_Form_Folge_Gewalt}.
 
 % psychische Gewalt
-Psychische Gewalt kann durch Worte oder auch durch Gesten und Gesichtsausdrücke erfolgen \parencite{Def_haus_Gewalt_2}
-Einige Beispiele für psychische Gewalthandlungen sind Beleidigungen, wie Beschimpfungen und die damit 
-einhergehende Demütigung der betroffenen Person. Oftmals beschädigt die gewalttätige Person Eigentum
-des Opfers oder behandelt dessen Haustiere nicht artgerecht. Es kann auch dazu kommen, dass die 
-eigenen Kinder genutzt werden, um bei der betroffenen Person Druck auszuüben. Unter psychische Gewalt
-fallen auch  eifersüchtige Verhaltensweisen, die sich bei der Beendigung einer Beziehung in Stalking
-umwandeln können \parencite{Def_Form_Folge_Gewalt, Gewaltart, Def_haus_Gewalt_2}.
-Diese Taten werden verwendet, um den Gegenüber zu manipulieren oder um den eigenen Interssen und 
-Absichten nachzugehen. Sie können auch Verwendung finden, um in böswilliger Absicht das 
-Selbstbewusstsein des Partner zu senken, so das dieser widerstandslosen Gehorsam zeigt \parencite{Def_haus_Gewalt_2}
-Diese Art von Gewalt ist nicht so wie die physische Gewalt zwangläufig am Körper sichtbar, ihre 
-negativen Folgen können dennoch tiefer liegen und länger andauern \parencite{psych_Gewalt}.
-Oftmals ist die psychische Gewalt bloß ein Vorreiter für spätere sexuelle Misshandlungen \parencite{psych_Gewalt_2}.
-Des Weiteren werden Opfer einer solchen Gewalt von ihrem sozialen Umfeld nicht immer erkannt. Dies 
-kann dazu führen, dass sie an ihrer persönlichen Wahrnehmung zweifeln. Die Reichweite und Intensität
-der Folgen ist von Person zu Person unterschiedlich und hängt von dessen Vorerfahrungen ab.
-Laut dem \textcite{Def_Form_Folge_Gewalt}
-zählt die Forschung die soziale und ökonomische Gewalt zu der psychischen dazu. Im Umfang dieser 
-Arbeit werden diese drei Arten jedoch getrennt betrachtet. 
+Psychische Gewalt kann durch Worte oder auch durch Gesten und Gesichtsausdrücke erfolgen \parencite{Def_haus_Gewalt_2}. Einige Beispiele für psychische Gewalthandlungen sind Beleidigungen, wie Beschimpfungen und die damit einhergehende Demütigung der betroffenen Person. Oftmals beschädigt die gewalttätige Person Eigentum des Opfers oder behandelt dessen Haustiere nicht artgerecht. Es kann auch dazu kommen, dass die eigenen Kinder genutzt werden, um bei der betroffenen Person Druck auszuüben. Unter psychische Gewalt fallen auch  eifersüchtige Verhaltensweisen, die sich bei der Beendigung einer Beziehung in Stalking umwandeln können \parencite{Def_Form_Folge_Gewalt, Gewaltart, Def_haus_Gewalt_2}. Diese Taten werden verwendet, um den Gegenüber zu manipulieren oder um den eigenen Interssen und Absichten nachzugehen. Sie können auch Verwendung finden, um in böswilliger Absicht das Selbstbewusstsein des Partner zu senken, so das dieser widerstandslosen Gehorsam zeigt \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt ist nicht so wie die physische Gewalt zwangläufig am Körper sichtbar, ihre negativen Folgen können dennoch tiefer liegen und länger andauern \parencite{psych_Gewalt}. Oftmals ist die psychische Gewalt bloß ein Vorreiter für spätere sexuelle Misshandlungen \parencite{psych_Gewalt_2}. Des Weiteren werden Opfer einer solchen Gewalt von ihrem sozialen Umfeld nicht immer erkannt. Dies kann dazu führen, dass sie an ihrer persönlichen Wahrnehmung zweifeln. Die Reichweite und Intensität der Folgen ist von Person zu Person unterschiedlich und hängt von dessen Vorerfahrungen ab. Laut dem \textcite{Def_Form_Folge_Gewalt} zählt die Forschung die soziale und ökonomische Gewalt zu der psychischen dazu. Im Umfang dieser Arbeit werden diese drei Arten jedoch getrennt betrachtet. 
 
 % sexualisiert Gewalt
-Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen, wie Drohungen oder 
-oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden \parencite{Übergang_psy_zu_sex_Gewalt}.
-Des öfteren geben die Betroffenen auf sich zu wehren und gehen den Anforderungen und Wünschen des
-Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet \parencite{Def_haus_Gewalt_2}.
-
-
-sexuelle Belästigung (1)
-    aufdringliches Zu-Nahe-kommen (1)
-    sex. anzügliche Sprüche (1)
-    unerwünschte Berührung/ Küsse/ ungewollte Sexualpraktiken (1,2)
-    Belästigung durch Entblößung (1,3)
-    Zeigen pornografischer Bilder/ Filme (1)
-sex. Nötigung (1)
-versuchte/ ausgeführte Vergewaltigung (1,2,3)
-ungewollte Berührungen im Intimbereich (1)
-Zwang zu sex. Handlungen (1,3) 
-Erzeugen sex. Atmisphäre (2)
-sex. Bloßstellen (2)
-sex. Ausbeutung (3)
-Zwang zur Prostitution (3)
-
-Bei Vergewaltigung: Macht und Zwangsgedanke viel stärker (3)
-Tätern oft Schuld nicht bewusst (3)
-denken: müssen tun, um Geschlechterhierarchie zu erhalten (3)
-
-
-%Def_Form_Folge_Gewalt (1), Gewaltart(2)
+Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen, wie Drohungen oder oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden \parencite{Übergang_psy_zu_sex_Gewalt}. Des Öfteren geben die Betroffenen auf, sich zu wehren und gehen den Anforderungen und Wünschen des Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt kann sich in unterschiedlichen sexualisierten Handlungen zeigen, wie die unerwünschte Nähe eines Partners, die Belästigung durch sexuelle Sprüche und Berührungen oder das Darbieten von pornografischen Bildern und Videos. Unter Vergewaltigung wird auch die Nötigung zu sexuellen Handlungen verstanden. Selbst der Versuch fällt unter die sexualisierte Gewalt \parencite{Def_haus_Gewalt_2, Gewaltart, Def_Form_Folge_Gewalt}. Die Zwangsgedanken und das Bedürfnis der Macht sind bei Vergewaltigungen stärker vorhanden, als bei anderen sexuellen Gewalthandlungen. Die ausübende Person ist der Auffassung, dass sie solche Handlungen ausüben muss, damit die Geschlechterhierarchie erhalten bleibt. Sie sind sich demzufolge oftmals ihrer Schuld nicht bewusst \parencite{Def_haus_Gewalt_2}.
 
 % soziale Gewalt
+Die soziale Gewalt wird vom \textcite{Def_Form_Folge_Gewalt} als Bestandteil der psychischen Gewalt angesehen. Auch sie ist körperlich nicht erkennbar. Es erfolgt eine soziale Abkoppelung des Opfers von dessn Umfeld. Der Kontakt zu Freunden oder Familien wird untersagt und auch das Treffen bekannter Personen ist sowohl außerhalb wie auch innerhalb des eigenen Zuhauses untersagt. In manchen Fällen sozialer Gewalt, werden die Telefonate durch den Täter mitgehört. Opfer haben oft nicht die Möglichkeit alleine das Haus zu verlassen. Sie werden von ihrem Partner zur und von der Arbeit gebracht \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Manche Opfer distanzieren sich, aufgrund der psychischen Belastungen, selbst von ihrem sozialen Umfeld. Durch den mangelden sozialen Kontakt ist die Hilfeleistung durch das Umfeld kaum, wenn nicht garnicht möglich \parencite{Def_haus_Gewalt_2}.
+
 % ökonomische Gewalt
+Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form_Folge_Gewalt} als Unterkategorie der psychischen Gewalt gezählt. Müssen sich die Opfer wiederholt Vorwürfe der Fehlerhaften bzw. nicht ausreichenden Fähigkeiten ihren Beruf, den Haushalt oder die Erziehung der eigenen Kinder auszuüben, erzeugt dies große psychische Belastungen \parencite{Def_haus_Gewalt_2}. Es wird ihnen verboten einen Beruf auszuüben, oder sie müssen die Erwerbe an den Partner abgeben, so dass er der einzige ist, der Macht und Kontrolle über die Finanzen hat \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Dadurch sind die Betroffenen finanziel von ihren Partnern abhängig \parencite{physische_Gewalt_wie_aggro}.Damit die Gewalt von der Öffentlichkeit nicht erkennbar ist, werden den Betroffenen teure Geschenke überreicht. Dies stärkt die Unsicherheit und Bedenken den Partner zu verlassen, weil schwere finanzielle Folgen befürchtet werden \parencite{Übergang_psy_zu_sex_Gewalt}.
+
+In Anlehung and das \textit{Rad der Gewalt} von \textcite{Rad_der_Gewalt} sind in Anhang A in Abbildung~\ref{Rad der Gewalt} die fünf Gewaltarten nochmal zusammenfassend bildlich dargestellt. %how to reference Anhang?
+
+% URSACHE + RISIKOFAKTOREN
+\subsubsection{Ursachen und Risikofaktoren von Gewalt}     \label{2.1.2.2}
+Wie bei viele Situationen und Krankheiten, besteht bei der häusliche Gewalt, oder im Rahmen dieser Arbeit die Partnerschaftsgewalt eine Multikausalität. Dies bedeutet, dass nicht ein einziger Faktor als Ursache zu determinieren ist. Es ist vielmehr die Interaktion und Verwobenheit vieler unterschiedlicher Ursachen auf unterschiedlichen Ebenen \parencite{Ursache_hG}.
 
 
 
-%- 5 Formen: physisch, psychische, sexualisiert, Ökonomisch, sozial (+Rad)
-%- Ursachen von Gewalt
-%- Risiko (und Schutzfaktoren)
+
+
+
+%- Ursachen von Gewalt + Risiko (und Schutzfaktoren)
 %- Gewaltmuster: situativ \textbf{systematisch}
 %- Gewaltkategorien: gegen selbst; von Kleingruppe ausgehend; Kollektive Gewalt
-%- Folgen: körperlich; gesundheitsgefährdende (Überlebens-) Strategien; (Psycho-)somatische; 
-%      reproduktive Gesundheit; psychische
+%- Folgen: körperlich; gesundheitsgefährdende (Überlebens-) Strategien; (Psycho-)somatische; reproduktive Gesundheit; psychische
 %- Istambul Konvention: was ist das; welche Aspekte; Artikel 11 und 13 (Partnerschaft Gewalt2020)
 
 %Die Weltgesundheitsorganisation (WHO) differenziert in ihrem Bericht zu Gewalt und 
