--- a/2 Theorie/Theorie.tex
+++ b/2 Theorie/Theorie.tex
@@ -6,16 +6,16 @@ eine theoretische Herleitung der einzelnen Hypothesen.
 
 % 2.1 Konstrukte:
 \section{Konstrukte}    \label{sec_2.1}
-Im Anschluss erfolgt in den Unterkapiteln ~\ref{subsec_2.1.1} Aggression, ~\ref{subsec_2.1.2} 
-Häusliche Gewalt und ~\ref{subsec_2.1.3} Gewaltmythen eine Darbietung der einzelnen 
-Konstrukte.
+Im Anschluss erfolgt in den Unterkapiteln ~\ref{subsec_2.1.1} Aggressivität und Aggression, 
+~\ref{subsec_2.1.2} Häusliche Gewalt und ~\ref{subsec_2.1.3} Gewaltmythen eine Darbietung der 
+einzelnen Konstrukte.
 
 \input{2 Theorie/2.1.1 Aggressivität.tex}
 \input{2 Theorie/2.1.2 Häusliche Gewalt.tex}
 \input{2 Theorie/2.1.3 Gewaltmythen.tex}
 
 % 2.2 Theoretischer Hintergrund: Aktueller Forschungsstand
-\section{Theoretische Herleitung der Hypothesen}   \label{sec_2.2}
+\section{Aktueller Forschungsstand}   \label{sec_2.2}
 In dieser Studie wird folgende Frage untersucht: Welchen Zusammenhang gibt es zwischen
 Aggressivität und der Akzeptanz von Gewaltmythen, sowie der Tendez zum victim blaming?
 (mögliche Quelle, die das unterschützt) 
