--- a/3 Methode/Methoden.tex
+++ b/3 Methode/Methoden.tex
@@ -8,7 +8,7 @@ Rekrutierung und Eigenschaften der Stichprobe
 
 
 \section{Untersuchungsdesign}  \label{sec_3.2}
-Präregistrierung \\
+Präregistrierung \\ %im Rahmen dessen gibt es weitere 4 Studien und NUR nennen was die erhoben
 Feld-Laborstudie\\
 genutzte Methode \\
 Design \\
