--- a/Anhang.tex
+++ b/Anhang.tex
@@ -2,15 +2,16 @@
 \begin{appendices}
     \chapter*{Anhang A}
     \addcontentsline{toc}{chapter}{A}
-    \noindent \textit{Titel von Anhang A}
+    \noindent \textit{Rad der Gewalt}
+    
+    \begin{figure}[htb]
+        \centering
+            \includegraphics[width=0.8\linewidth]{Rad der Gewalt.png}
+            \caption[Rad der Gewalt]{Rad der Gewalt \parencite{Rad_der_Gewalt}.}
+            \label{Rad der Gewalt}
+    \end{figure}
 
-Wenn nur ein Anhang vorhanden ist, dann sieht die Syntax so aus:
-
-\noindent \texttt{\char`\\ chapter*\char`\{Anhang\char`\}} \\
-\texttt{\char`\\addcontentsline\char`\{toc\char`\}\char`\{chapter\char`\}\char`\{
-    Anhang\char`\}} \\
-\texttt{\char`\\noindent \char`\\textit\char`\{Titel des Anhangs\char`\}}
-
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
     \chapter*{Anhang B}
     \addcontentsline{toc}{chapter}{B}
