--- a/Quellen.bib
+++ b/Quellen.bib
@@ -113,7 +113,8 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- 
+% bei allen online-Quellen wirds nicht kursiv gemacht
+
 % Einleitung: Zitat
 @online{Friedrich_Hacker,
   author      = {zitate.eu},
@@ -358,17 +359,18 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   year           = {2013}
 }
 
-@thesis{Def_haus_Gewalt_2,
-  author        = {Kolier, S.},
-  title         = {Frauen als Opfer häuslicher Gewalt: Eine empirische Darstellung mit Bezug auf erneute Gewalt in Partnerschaften und künftige Liebesbeziehungen},
-  year          = {2019}
+@mastersthesis{Def_haus_Gewalt_2,
+  author  = {Kolier, S.},
+  school  = {Karl-Franzens-Universität Graz Institut für Erziehungs- und Bildungswissenschaften},
+  title   = {Frauen als Opfer häuslicher Gewalt: Eine empirische Darstellung mit Bezug auf erneute Gewalt in Partnerschaften und künftige Liebesbeziehungen},
+  year    = {2019}
 }
 
-@MISC{Def_Form_Folge_Gewalt,
+@booklet{Def_Form_Folge_Gewalt,
   author       = {{Eidgenössisches Büro für die Gleichstellung von Frau und Mann}},
   shortauthor  = {EBG},
   title        = {Definition, Formen und Folgen häuslicher Gewalt},
-  year         = {2020},        
+  year         = {2020},
 }
 
 @inbook{ph_G_wie_aggro,
@@ -379,8 +381,10 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   year           = {2006}
 }
 
-@thesis{Gewaltart,
+% keine masterarbeit sondern bachelor --> ändern
+@mastersthesis{Gewaltart,
   author        = {Blumenthal, S. and Simonett, L.},
+  school        = {Berner Fachhochschule Soziale Arbeit},
   title         = {Häusliche Gewalt gegen Frauen Analyse der aktuellen Unterstützungsangebote mit Handlungsempfehlungen für den Kanton Graubünden},
   year          = {2019},
 }
@@ -416,4 +420,26 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   title          = {Partnergewalt gegen Frauen und deren Gewaltbewältigung},
   year           = {2014},
   doi            = {https://doi.org/10.1007/978-3-86226-848-1},
+}
+
+@online{Rad_der_Gewalt,
+  author        = {{Zentrale Informationsstelle Autonomer Frauenhäuser}},
+  shortauthor   = {ZIA},
+  title         = {Gewalt gegen Frauen},
+  year          = {2022},
+  url           = {https://autonome-frauenhaeuser-zif.de/themen/#istanbul},
+}
+
+@techreport{key,
+  author      = {},
+  institution = {Eidgenössisches Büro fr die Gleichstellung von Frau und Mann EBG},
+  title       = {Gewalt in Paarbeziehungen. Ursachen und in der Schweiz getroffene Massnahmen},
+  year        = {2008}
+}
+
+@booklet{Ursache_hG,
+  author       = {{Eidgenössisches Büro für die Gleichstellung von Frau und Mann}},
+  shortauthor  = {EBG},
+  title        = {Ursachen, Risiko- und Schutzfaktoren von Gewalt in Paarbeziehungen},
+  year         = {2020},
 }
