häusliche Gewalt Ursachen und Kreislauf 01.07.22

--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -23,19 +23,29 @@ Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form
 
 In Anlehung and das \textit{Rad der Gewalt} von \textcite{Rad_der_Gewalt} sind in Anhang A in Abbildung~\ref{Rad der Gewalt} die fünf Gewaltarten nochmal zusammenfassend bildlich dargestellt. %how to reference Anhang?
 
-% URSACHE + RISIKOFAKTOREN
-\subsubsection{Ursachen und Risikofaktoren von Gewalt}     \label{2.1.2.2}
-Wie bei viele Situationen und Krankheiten, besteht bei der häusliche Gewalt, oder im Rahmen dieser Arbeit die Partnerschaftsgewalt eine Multikausalität. Dies bedeutet, dass nicht ein einziger Faktor als Ursache zu determinieren ist. Es ist vielmehr die Interaktion und Verwobenheit vieler unterschiedlicher Ursachen auf unterschiedlichen Ebenen \parencite{Ursache_hG}.
+% URSACHE + KREISLAUF DER GEWALT
+\subsubsection{Ursachen und Aufrechterhaltung von Gewalt}     \label{2.1.2.2}
+Wie bei viele Situationen und Krankheiten, besteht bei der häusliche Gewalt, oder im Rahmen dieser Arbeit die Partnerschaftsgewalt eine Multikausalität. Dies bedeutet, dass nicht ein einziger Faktor als Ursache zu determinieren ist. Es ist vielmehr die Interaktion und Verwobenheit vieler unterschiedlicher Ursachen auf unterschiedlichen Ebenen \parencite{Ursache_hG}. Ein ökologisches Modell versucht anhand von vier Ebenen die Entstehung von Partnerschaftsgewalt zu systematisieren. Die unterschiedlichen Faktoren auf den jeweiligen Ebenen stehen im Zusammenhang miteinander und untereinander und bedingen sich somit gegenseitig. Durch die gemeinsame Interaktion können sie die Auftretenswahrscheinlichkeit von häuslicher Gewalt bevorzugen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
+Auf der kleinsten Ebene steht das Individuum, dessen Verhalten durch persönliche, biologische und entwicklungsbedingte Faktoren beeinflusst wird. Ausschlaggebend sind hierbei eigene Erfahrungen mit Misshandlungen, sowie exessiver Konsum von Suchtmitteln \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Das Verhalten der Personen ist laut \textcite{Gewaltart} sowie \textcite{Ursache_hG_2} ebenfalls durch psychische Störungen und Störungen der Persönlichkeit geprägt. Aber auch nicht klinische Eigenschaften, wie das Selbstwertgefühl oder die Stressregulationsfähigkeiten, haben einen bedeutsamen Einfluss auf menschliches Verhalten auf der individuellen Ebene \parencite{Ursache_hG}.
+Eine Instanz höher, auf der Beziehungsebene, beschäftigt sich die Forschung mit der zwischenmenschlichen Interaktion naher Beziehungen. Hierbei wird die Art und Weise betrachtet, wie Partner im Austausch zueinander stehen, wie die Macht zwischen den Partnern verteilt ist und wie sie mit Konflikten unterschiedlichen Ausmaßes innerhalb der Beziehung umgehen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
+Auf der Ebene der Gesellschaft wird das soziale und räumliche Umfeld, wie Verwandte, Freunde, Nachbarn, oder der Arbeitsplatz und Vereine betrachtet. Die Forschung betrachtet Aspekte wie die soziale Isolation oder ein gewalttolerierendes und unterstützendes Mileau \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die Nachbarschaft hat auch mit ihrer Rate an nicht Erwerbstätigen und durch mögliche Drogengeschäfte einen großen Einfluss auf das Verhalten der Beziehungspartner \parencite{Ursache_hG, Gewaltart}.
+Die höchste Ebene ist die der Gesellschaft. Durch ihre sozialen und kulturellen Normen schafft sie ein gewaltförderndes oder -hinterndes Umfeld \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die positive bzw. negative Auffassung von Gewalt in der Gesellschaft generell, aber vor allem in der Politik, im Justizsystem und in den Medien beeinflusst das menschliche Verhalten \parencite{Ursache_hG_2, Ursache_hG}.  
+
+Häufig entwickelt sich häusliche Gewalt  zu einem immer wiederkehrenden Kreislauf. Dieser beinhaltet die folgenden drei zusammenhängenden Zyklen:
+\begin{itemize}
+    \item Spannungsaufbau
+    \item Gewaltausbruch
+    \item Reue, Entschuldigungs- und Entlastungsversuche
+\end{itemize}
+Bei wiederholter Durchführung nimmt die zweite Phase an Intensität zu und tritt vermehrt auf. Da sich die entlastende Phase der Entschuldigung und Reue dabei verringert, fällt es den Opfern häuslicher Gewalt schwer, sich aus einer solchen Beziehung zu entfernen \parencite{Def_haus_Gewalt}.
 
 
 
 
 
-
-%- Ursachen von Gewalt + Risiko (und Schutzfaktoren)
-%- Gewaltmuster: situativ \textbf{systematisch}
-%- Gewaltkategorien: gegen selbst; von Kleingruppe ausgehend; Kollektive Gewalt
-%- Folgen: körperlich; gesundheitsgefährdende (Überlebens-) Strategien; (Psycho-)somatische; reproduktive Gesundheit; psychische
+%- Gewaltmuster: situativ \textbf{systematisch} a1 Definition
+%- Gewaltkategorien: gegen selbst; von Kleingruppe ausgehend; Kollektive Gewalt a1 Definition
+%- Folgen: körperlich; gesundheitsgefährdende (Überlebens-) Strategien; (Psycho-)somatische; reproduktive Gesundheit; psychische 
 %- Istambul Konvention: was ist das; welche Aspekte; Artikel 11 und 13 (Partnerschaft Gewalt2020)
 
 %Die Weltgesundheitsorganisation (WHO) differenziert in ihrem Bericht zu Gewalt und 
