--- a/3 Methode/Methoden.tex
+++ b/3 Methode/Methoden.tex
@@ -32,7 +32,8 @@ sozio erhoben \\
 potentielle störvariablen (wegen online nicht kontrollierbar)
 
 \section{Auswertungsmethode}    \label{sec_3.5}
-SPSS ausgewertet \\
+SPSS ausgewertet \\ %was umgepolt wurde: GP13,14,17    GS2,5,8
+% Vorbereitung der Daten: wieviele wurden rausgeschmissen
 deskriptive \\ % Lage, Streuung, Median, Modus, Mittelwert, SD
 hypothesen \\ % das aus präregistrierung: gerichtet, unterschied, tests
 % H3, weil Moderatorviariable hat wurde auf SPSS mit dem plug-in PROCESS berechnet
