--- a/Quellen.bib
+++ b/Quellen.bib
@@ -430,8 +430,8 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   url           = {https://autonome-frauenhaeuser-zif.de/themen/#istanbul},
 }
 
-@techreport{key,
-  author      = {},
+@techreport{Ursache_hG_2,
+  author      = {Agger, T. and Schär Moser, M.},
   institution = {Eidgenössisches Büro fr die Gleichstellung von Frau und Mann EBG},
   title       = {Gewalt in Paarbeziehungen. Ursachen und in der Schweiz getroffene Massnahmen},
   year        = {2008}
