add on situativ und systematisch 01.07.22

--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -1,6 +1,9 @@
 \subsection{Häusliche Gewalt}    \label{subsec_2.1.2}
 % Definition häusliche Gewalt
-Wie in Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression bereits erwähnt ist der Zweck von Gewalt die Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}. Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht Macht oder Kontrolle über ein anderes Mitglied zu haben, zählt das zur häuslichen Gewalt. Sowohl in bestehenden, wie auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}. Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}. Die in häusliche Gewalt involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft.
+Wie in Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression bereits erwähnt ist der Zweck von Gewalt die Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}. Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht Macht oder Kontrolle über ein anderes Mitglied zu haben, zählt dies zur häuslichen Gewalt. Sowohl in bestehenden, wie auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}. Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}. 
+Es lassen sich dabei zwei Muster identifizieren. Ein \textit{spontanes Konfliktverhalten}, oder auch \textit{situative Gewalt} gennant, kann einmalig, aber auch regelmäßig stattfinden und hat die Funktion einer negativen Stressbewältigung. Durch fehlende Ressourcen sehen die gewalttätigen Personen nur die Gewalt als einzige Lösung, um ein Konflikt zu lösen. Ein solches Gewaltmuster ist sowohl bei Männern, wie auch bei Frauen zu finden. Das Motiv von Macht und Kontrolle ist in diesen Fällen nicht ausschlaggebend. Dieses Verhaltensmuster kann sich jedoch in langanhaltendes \textit{systematisches Gewalt- und Kontrollverhalten} verwandeln. Hier haben Macht und Kontrolle eine große Rolle. In diesen Fällen existiert die Absicht den Gegenüber zu kontrollieren und ein langanhaltendes Gefühl von Macht zu verspühren. Dieses Verhalten ist vermehrt bei Männer vorzufinden, die sich in einer ungleichen Beziehung befinden. Um dieses Gefühl von Macht und Kontrolle zu verspüren greifen sie auf entwürdigendes und machtmissbrauchendes Verhalten zurück \parencite{Def_Form_Folge_Gewalt}.
+Die in häusliche Gewalt involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft.
+
 
 % GEWALTARTEN
 \subsubsection{Gewaltarten}     \label{2.1.2.1}
@@ -43,7 +46,6 @@ Bei wiederholter Durchführung nimmt die zweite Phase an Intensität zu und trit
 
 
 
-%- Gewaltmuster: situativ \textbf{systematisch} a1 Definition
 %- Gewaltkategorien: gegen selbst; von Kleingruppe ausgehend; Kollektive Gewalt a1 Definition
 %- Folgen: körperlich; gesundheitsgefährdende (Überlebens-) Strategien; (Psycho-)somatische; reproduktive Gesundheit; psychische 
 %- Istambul Konvention: was ist das; welche Aspekte; Artikel 11 und 13 (Partnerschaft Gewalt2020)
